--- a/Cosmic/App/View/Home/Profile/widgets.html
+++ b/Cosmic/App/View/Home/Profile/widgets.html
@@ -103,7 +103,7 @@
    </div>
 </div>
 <div class="userplate">
-   <div class="useravatar"><img src="https://habbo.com.br/habbo-imaging/avatarimage?figure={{user.data.look}}&gesture=sml&headonly=1"></div>
+   <div class="useravatar"><img src="{{site.fpath}}/avatarimage?figure={{data.player.look}}&gesture=sml&headonly=1"></div>
 </div>
 <div class="usermotto">
    {{data.player.motto}}
