--- a/Cosmic/App/View/Help/new.html
+++ b/Cosmic/App/View/Help/new.html
@@ -19,6 +19,7 @@
                         <h5>{{locale.description}}</h5>
                         <textarea name="message" class="rounded-textarea blue-active" required></textarea>
                     </div>
+                        <input type="hidden" name="csrftoken" value="{{csrf_token}}">
                     <p style="text-align: center; margin-top: 30px;"><button type="submit" class="rounded-button blue">{{locale.open_ticket}}</button></p>
                 </form>
               </div>
