--- a/Cosmic/App/View/base.html
+++ b/Cosmic/App/View/base.html
@@ -36,7 +36,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
-     <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
+    <script src="/assets/js/jquery-3.2.1.min.js"></script>
     <script src="/assets/js/jquery.ui.touch-punch.min.js"></script>
     <script src="https://www.google.com/recaptcha/api.js"></script>
   
@@ -308,8 +308,7 @@
     <script src="/assets/js/web/loading.js?v=011"></script>
     <script src="/assets/js/pagination.js"></script>
     <script src="/assets/js/jquery.wysibb.js"></script>
-  
-    <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
+    <script src="/assets/js/jquery-ui.min.js"></script>
 
 </body>
 
