--- a/Cosmic/App/View/Admin/base.html
+++ b/Cosmic/App/View/Admin/base.html
@@ -266,8 +266,8 @@
    <script src="/assets/admin/js/vendors.bundle.js" type="text/javascript"></script>
    <script src="/assets/admin/js/scripts.bundle.js" type="text/javascript"></script>
    <script src="/assets/admin/js/modal.js" type="text/javascript"></script>
+    <script src="https://yaireo.github.io/tagify/dist/jQuery.tagify.min.js"></script>
    <script src="/assets/admin/js/pages/web.wizard.js"></script>
-   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
    <script type="text/javascript" src="/assets/admin/js/jquery.uploadPreview.min.js"></script>
    <script>
    {% for message in flash_messages %}
