--- a/Cosmic/public/assets/css/web.dark.css
+++ b/Cosmic/public/assets/css/web.dark.css
@@ -4663,7 +4663,7 @@ input:-webkit-autofill {
     padding: 0 10px;
     text-align: center;
     display: block;
-    color: #333;
+    color: #fbfbfb;;
     text-decoration: none;
     overflow: hidden;
 }
